--- a/.github/workflows/maven-main.yml
+++ b/.github/workflows/maven-main.yml
@@ -18,3 +18,11 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: run student application
+      run: cd ./app/ $$ java -jar rest.jar
+
+  testing:
+     runs-on: [ubuntu-16.04]
+     needs: [before_testing]
+ 
+  steps:
