--- a/.github/workflows/maven-main.yml
+++ b/.github/workflows/maven-main.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         java-version: 1.8
     - name: run student application
-      run: cd ./app/ && java -jar rest.jar
+      run: java -jar rest.jar
 
  my_testing:
    runs-on: [ubuntu-16.04]
