--- a/.github/workflows/maven-main.yml
+++ b/.github/workflows/maven-main.yml
@@ -17,24 +17,18 @@ jobs:
       with:
         java-version: 1.8
     - name: run student application
-      run: java -jar rest.jar
-
- my_testing:
-   runs-on: [ubuntu-16.04]
-   needs: [before_testing]
-   
-   steps:
-   - name: Build with Maven
-     run: mvn -B package --file pom.xml 
-   - name: list current folder
-     run: ls -la  
+      run: cd ./app/ && java -jar rest.jar
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml 
+    - name: list current folder
+      run: ls -la  
   
  after_testing:
-     runs-on: [ubuntu-16.04]
-     needs: [my_testing]
+      runs-on: [ubuntu-16.04]
+      needs: [before_testing]
      
-     steps:
-     - name: Print Hello
-       run: echo "Hello!"
+      steps:
+      - name: Print Hello
+        run: echo "Hello!"
  
    
