--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,15 +3,28 @@ name: Java CI
 on: [push]
 
 jobs:
-  build:
+  before-test:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
+    - name: print Hello
+      uses: echo "Hello!"
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
     - name: Build with Maven
+      run: cd ./app && java -jar rest.jar
+ 
+ build:
+
+    runs-on: ubuntu-18.04
+
+    steps:
+    - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
+      
+      
