--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: JavaCI
 
 on: 
   push:
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - name: print Hello
-      uses: echo Hello!
+      run: echo Hello!
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
