--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   before-test:
 
-    runs-on: windows
+    runs-on: [ubuntu-18.04]
 
     steps:
     - name: print Hello
@@ -23,7 +23,7 @@ jobs:
  
   testing:
 
-    runs-on: ubuntu-18.04
+    runs-on: [ubuntu-18.04]
     needs: [before-test]
 
     steps:
