--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: grant
+      run: chmod +x ./app/rest.jar
     - name: run our application
       run: cd ./app && java -jar rest.jar
  
