--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,12 +18,10 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: copepaste jar
+    
+    - name: copypaste jar
       uses: cp app/rest.jar /home/rest.jar
     - name: run rest.jar for testing
       run: java -jar app/rest.jar
     - name: run our application 
-      run: mvn -B package --file pom.xml 
-
-      
-  
+      run: mvn -B package --file pom.xml
