--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,9 +15,8 @@ jobs:
       run: echo Hello!
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.11
+      uses: actions/setup-java@v1.8.0_212
+      
     
     - name: run rest.jar for testing
       run: java -jar app/rest.jar
