--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,13 +13,14 @@ jobs:
     steps:
     - name: print Hello
       run: echo Hello!
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@latest
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+      uses: actions/setup-jdk@v1
       with:
         java-version: 1.8
-    
+        architecture: 'x64'
+  
     - name: run rest.jar for testing
-      run: java -jar app/rest.jar
+      run: java -cp java app/rest.jar
     - name: run our application 
       run: mvn -B package --file pom.xml
