--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,9 +13,9 @@ jobs:
     steps:
     - name: print Hello
       run: echo Hello!
-    - uses: actions/checkout@latest
+    - uses: actions/checkout@v2
     - name: Set up JDK 1.8
-      uses: actions/setup-jdk@v1
+      uses: actions/setup-java@v1
       with:
         java-version: 1.8
         architecture: 'x64'
